# ConducaoCpp

./: .gitignore  CMakeLists.txt
libs/InterLin/: CMakeLists.txt
libs/InterLin/src/: CInterpolacao.cpp  CInterpolacao.hpp  CReta.cpp  CReta.hpp  CSegmentoReta.cpp  CSegmentoReta.hpp
libs/qcustomplot/: CMakeLists.txt
src/: CCondutividade.cpp  CCondutividade.hpp  CFluxoCalor.cpp  CFluxoCalor.hpp  main.cpp
